# RP2040-READ-WRITE-UARTT

./: CMakeLists.txt  main.c
